Fix RCE example to use shell invocation so command injection is actually exploitable